fe-be/fe-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-frontend
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-frontend
  revisionHistoryLimit: 5
  template:
    metadata:
      labels:
        app: demo-frontend
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: eks.amazonaws.com/nodegroup
                operator: NotIn
                values:
                - dev_gpu_node_group 
      containers:
        - name: demo-frontend
          image: 068251041443.dkr.ecr.ap-northeast-2.amazonaws.com/dev-frontend:707c3e305bae49c4fc7a8af591fbbe10cac152d9
          imagePullPolicy: Always
          ports:
            - containerPort: 4000
          volumeMounts:
            - name: nodeenv
              mountPath: /usr/app/env
      volumes:
        - name: nodeenv
          secret:
            secretName: nodeenv
