fe-be/fe-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "demo-nodejs-backend-ingress"
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: "ip"
    alb.ingress.kubernetes.io/scheme: "internet-facing"
    alb.ingress.kubernetes.io/subnets: "subnet-0bf3a4baada67532d,subnet-0f36250a720a8aa5c,subnet-0c226d936d975f5d1"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80,"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:ap-northeast-2:068251041443:certificate/627a2a89-a7da-4ea7-82ff-64d90e5aafd3"
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/backend-protocol: "HTTP"
    alb.ingress.kubernetes.io/load-balancer-attributes: access_logs.s3.enabled=true,access_logs.s3.bucket=for-logging-sesac-2023,access_logs.s3.prefix=node
 #   alb.ingress.kubernetes.io/load-balancer-attributes: access_logs.s3.enabled=true,access_logs.s3.bucket=prod-sesac-logging-bucket-2023,access_logs.s3.prefix=node   
spec:
  rules:
  - host: www.sesac.site
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: demo-frontend
              port:
                number: 443
